syntax = "proto3";

package anomaly;

service AnomalyDetection {
    rpc RunHeaderDetection(HeaderDetectionRequest) returns (HeaderDetectionResponse);
}

message Header {
    string name = 1;
    string value = 2;
}

message HeaderDetectionRequest {
    repeated Header headers = 1;
}

message HeaderDetectionResponse {
    Detection detection = 1;
}

message Detection {
    bool anomaly_detected = 1;
    string message = 2;
}
